# agent-bit

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LOG.md  Makefile  README.md  config.toml
.claude/skills/evolve/: SKILL.md  config.json  results.tsv
.githooks/: pre-commit
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/prod-analysis/: openai-api-comparison.md
benchmarks/runs/: 2026-03-31__nemotron__0335320.md  2026-03-31__openai-full__05a4aed.md  2026-03-31__openai__0335320.md  2026-04-01__evolve-session__00667d6.md  2026-04-01__nemotron__3cf84f2.md  2026-04-01__openai-mini-structured__8602321.md  2026-04-01__openai-mini__03fabda.md  2026-04-02__gpt54__cbb3c72.md  2026-04-02__nemotron__a1df2d4.md  2026-04-03__nemotron-final__13f9d9c.md  2026-04-03__nemotron__b3ec68e.md  2026-04-05__nemotron__1218845.md  2026-04-05__nemotron__16acf04.md  2026-04-06__nemotron__18dd168.md  2026-04-06__nemotron__fccfb70.md
crates/bitgn-sdk/: Cargo.toml  README.md
crates/bitgn-sdk/src/: lib.rs
docs/: evolution.md  pangolin-analysis.md  pangolin-arch.md  pangolin-py-results.md  roadmap.md  runbook-pac1.md  workflow.md
docs/plan-done/account-context_20260406/: plan.md
docs/plan-done/blocking-outcome-validator_20260404/: spec.md
docs/plan-done/calibrate-outcome-validator_20260404/: spec.md
docs/plan-done/confidence-reflection_20260404/: plan.md  spec.md
docs/plan-done/erc-advanced/: plan.md
docs/plan-done/erc-patterns/: plan.md  spec.md
docs/plan-done/fix-otp-classification/: spec.md
docs/plan-done/fix-prompt-regression_20260404/: spec.md
docs/plan-done/fix-t03-file-ops_20260403/: spec.md
docs/plan-done/fix-t08-delete-ambiguity_20260403/: plan.md  spec.md
docs/plan-done/fix-t08-delete-pregrounding_20260404/: plan.md
docs/plan-done/fix-t19-overcautious_20260403/: spec.md
docs/plan-done/fix-t20_20260406/: plan.md
docs/plan-done/fix-t23-contact-ambiguity_20260403/: plan.md
docs/plan-done/fix-t25_20260406/: plan.md
docs/plan-done/fix-t29_20260406/: spec.md
docs/plan-done/fix-t36_20260406/: plan.md  spec.md
docs/plan-done/fix-verifier-regression_20260405/: plan.md  spec.md
docs/plan-done/harden-otp-t25-t29_20260404/: plan.md
docs/plan-done/harden-t23-nemotron_20260404/: plan.md  spec.md
docs/retro/: 2026-04-03-retro-final.md  2026-04-03-retro.md  2026-04-04-retro-comprehensive.md  2026-04-04-retro-final-pipeline.md  2026-04-04-retro-final.md  2026-04-04-retro-full.md  2026-04-04-retro-pipeline.md  2026-04-04-retro-session.md  2026-04-04-retro.md  2026-04-05-retro-full.md  2026-04-05-retro-prompt-diet.md  2026-04-05-retro.md  2026-04-06-retro.md
models/: class_embeddings.json  openai_class_embeddings.json
prompts/: pangolin-py.md  pangolin.md  system.md
python/: workspace.py
scripts/: evolve-all.sh  export_cf_embeddings.py  export_model.py  export_nli_model.py  export_openai_embeddings.py  leaderboard.sh  pango-sample.sh
skills/capture-distill/: SKILL.md
skills/cleanup/: SKILL.md
skills/crm-default/: SKILL.md
skills/crm-invoice/: SKILL.md
skills/crm-lookup/: SKILL.md
skills/finance-query/: SKILL.md
skills/followup-reschedule/: SKILL.md
skills/inbox-processing/: SKILL.md
skills/invoice-creation/: SKILL.md
skills/non-work/: SKILL.md
skills/nora-migration/: SKILL.md
skills/purchase-ops/: SKILL.md
skills/security-credential/: SKILL.md
skills/security-injection/: SKILL.md
skills/unsupported/: SKILL.md
src/: agent.rs  bitgn.rs  classifier.rs  config.rs  crm_graph.rs  dashboard.rs  eval_full.rs  feature_matrix.rs  hooks.rs  intent.rs  intent_classify.rs  llm_config.rs  main.rs  pac1_sgr.rs  pangolin.rs  pangolin_py.rs  pcm.rs  pipeline.rs  policy.rs  pregrounding.rs  prompts.rs  scanner.rs  skills.rs  tools.rs  trial_dump.rs  util.rs  workflow.rs
tools/phoenix/: main.py  pyproject.toml
(+83 files in other folders)
