[package]
name = "pac1-agent"
version = "0.1.0"
edition = "2024"
description = "BitGN PAC1 Challenge Agent — Rust + sgr-agent"
license = "MIT"

[[bin]]
name = "pac1"
path = "src/main.rs"

[dependencies]
sgr-agent = { path = "../../shared/rust-code/crates/sgr-agent", default-features = false, features = ["agent", "oxide", "telemetry"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
