[workspace]
members = [".", "crates/bitgn-sdk"]
resolver = "2"

[package]
name = "pac1-agent"
version = "0.1.0"
edition = "2024"
description = "BitGN PAC1 Challenge Agent — Rust + sgr-agent"
license = "MIT"

[[bin]]
name = "pac1"
path = "src/main.rs"

[dependencies]
sgr-agent = { path = "../../shared/rust-code/crates/sgr-agent", default-features = false, features = ["agent", "oxide", "genai", "providers", "telemetry"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
toml = "0.8"
futures = "0.3"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
schemars = "0.8"
ammonia = "4"
bitgn-sdk = { path = "crates/bitgn-sdk" }
connectrpc = { version = "0.3", features = ["client", "client-tls"] }
webpki-roots = "0.26"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"
petgraph = "0.7"
strsim = "0.11"
