[workspace]
members = [".", "crates/bitgn-sdk"]
resolver = "2"

[package]
name = "pac1-agent"
version = "0.6.0"
edition = "2024"
description = "BitGN PAC1 Challenge Agent — Rust + sgr-agent"
license = "MIT"

default-run = "pac1"

[[bin]]
name = "pac1"
path = "src/main.rs"

[[bin]]
name = "pac1-dash"
path = "src/dashboard.rs"

[dependencies]
sgr-agent = { path = "../../shared/rust-code/crates/sgr-agent", default-features = false, features = ["agent", "oxide", "genai", "providers", "telemetry", "session"] }
sgr-agent-tools = { path = "../../shared/rust-code/crates/sgr-agent-tools", features = ["eval", "patch"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
toml = "0.8"
futures = "0.3"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
schemars = "0.8"
ammonia = "4"
mailparse = "0.15"
jsonschema = "0.28"
regex = "1"
unicode-normalization = "0.1"
bitgn-sdk = { path = "crates/bitgn-sdk" }
connectrpc = { version = "0.3", features = ["client", "client-tls"] }
webpki-roots = "0.26"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.16"
petgraph = "0.7"
strsim = "0.11"
dotenvy = "0.15.7"
ratatui = "0.29"
crossterm = "0.28"
llm_json = { path = "../../shared/rust-code/crates/llm-json" }
boa_engine = "0.20"
boa_gc = "0.20"
chrono = "0.4"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }

[patch.crates-io]
openai-oxide = { path = "../../active/openai-rust" }
